# perspicuity

./: README.md  flake.nix  pyproject.toml
backend/: main.py
frontend/: package-lock.json
frontend/src/: App.jsx
